--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         </a>
     </div>
     <div>
+        <a href="https://chic-pika-d3b8b0.netlify.app/" target="_blank">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Black Jack
+        </a>
+    </div>
+    <div>
         <a href="https://gerhardp4.netlify.app/" target="_blank">
             <span></span>
             <span></span>
